Messing with background/formats

--- a/JSP/general_banner.html
+++ b/JSP/general_banner.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>Generic Banner</title>
 
 <style>
 h1 {
-	color: red
+	color: blue
 }
 
 #banner, image {
@@ -14,7 +14,7 @@ h1 {
 }
 
 #menus {
-	background-color: red;
+	background-color: blue;
 	overflow: hidden;
 	width: 100%;
 	height: auto;
@@ -22,7 +22,7 @@ h1 {
 }
 
 input[type=submit] {
-	border: red;
+	border: white;
 	background: transparent;
 	color: #fff;
 	font-family: "serif";
@@ -46,7 +46,12 @@ input[type=submit] {
 <body>
 
 	<div>
-		<div>
+		<div>	
+			<div>
+				<div id="banner">
+					<h1>The Grid</h1>
+				</div>
+			</div>
 			<div id="menus">
 				<div>
 					<form action="create_user.jsp">
@@ -59,10 +64,6 @@ input[type=submit] {
 					</form>
 				</div>
 			</div>
-			<div id="banner">
-				<h1>The Grid</h1>
-			</div>
-
 		</div>
 	</div>
 
