Starting to set up shopping cart queries

--- a/JSP/login_banner.html
+++ b/JSP/login_banner.html
@@ -57,6 +57,12 @@ input[type=submit] {
 						<input type="submit" value="Logout">
 					</form>
 				</div>
+				<div>
+					<form action="shopping_cart.jsp">
+						<input type="submit" value="Cart">
+					</form>
+				</div>
+				
 			</div>
 			
 
