--- a/JSP/general_banner.html
+++ b/JSP/general_banner.html
@@ -54,6 +54,11 @@ input[type=submit] {
 			</div>
 			<div id="menus">
 				<div>
+					<form action="shopping_cart.jsp">
+						<input type="submit" value="Cart">
+					</form>
+				</div>
+				<div>
 					<form action="create_user.jsp">
 						<input type="submit" value="Register">
 					</form>
