--- a/JSP/general_banner.html
+++ b/JSP/general_banner.html
@@ -6,7 +6,7 @@
 
 <style>
 h1 {
-	color: blue
+	color: gray
 }
 
 #banner, image {
@@ -14,7 +14,7 @@ h1 {
 }
 
 #menus {
-	background-color: blue;
+	background-color: gray;
 	overflow: hidden;
 	width: 100%;
 	height: auto;
@@ -24,7 +24,7 @@ h1 {
 input[type=submit] {
 	border: white;
 	background: transparent;
-	color: #fff;
+	color: black;
 	font-family: "serif";
 	font-size: 15pt;
 	padding: 5px 5px;
@@ -50,6 +50,7 @@ input[type=submit] {
 			<div>
 				<div id="banner">
 					<h1>The Grid</h1>
+					<hr style="padding:0px; margin:0px;">
 				</div>
 			</div>
 			<div id="menus">
