--- a/JSP/authorize.html
+++ b/JSP/authorize.html
@@ -8,6 +8,8 @@
 <body>
 	<!-- Filler page to make it look like something is being done. -->
 	<h3>Processing your payment...</h3>
-
+	
+	<p>Thanks for shopping here, you will be logged out before being redirected to PayPal for final processing.<p>
+	
 </body>
 </html>
