--- a/JSP/layout.html
+++ b/JSP/layout.html
@@ -12,7 +12,10 @@
 		table td{
 			max-width: 100%;
 			max-height: 25%;
-			background-color: #FFFFFF;
+			background-color: black;
+		}
+		table tr{
+			background-color: black;
 		}
 		table img{
 			max-height:100%;
@@ -24,13 +27,13 @@
 		}
 		
 		.productInfo{
-			background-color: #000000;
+			background-color: black;
 			vertical-align: bottom;
 			margin: auto;
 		}
 		input[type=image] {
-			width: 45%;
-			height: 45%;
+			width: 55%;
+			height: 55%;
 			border: 2px solid #000000;
 		}
 		
@@ -52,7 +55,7 @@
 			<td>
 				<div class="productInfo">
 					<form method="get" action="item.jsp">
-						<input type="hidden" name="pid" value="01"> <input
+						<input type="hidden" name="pid" value="02"> <input
 							type="image"
 							src="https://d4pww4vla1adk.cloudfront.net/media/catalog/product/cache/1/small_image/141x210/9df78eab33525d08d6e5fb8d27136e95/3/5/358940.jpg">
 					</form>
@@ -61,7 +64,7 @@
 			<td>
 				<div class="productInfo">
 					<form method="get" action="item.jsp">
-						<input type="hidden" name="pid" value="01"> <input
+						<input type="hidden" name="pid" value="03"> <input
 							type="image"
 							src="https://d4pww4vla1adk.cloudfront.net/media/catalog/product/cache/1/small_image/141x210/9df78eab33525d08d6e5fb8d27136e95/m/4/m4126dia-sag.jpg">
 					</form>
@@ -70,7 +73,7 @@
 			<td>
 				<div class="productInfo">
 					<form method="get" action="item.jsp">
-						<input type="hidden" name="pid" value="01"> <input
+						<input type="hidden" name="pid" value="04"> <input
 							type="image"
 							src="https://d4pww4vla1adk.cloudfront.net/media/catalog/product/cache/1/small_image/141x210/9df78eab33525d08d6e5fb8d27136e95/s/1/s1412.jpg">
 					</form>
@@ -85,75 +88,34 @@
 			<td>
 				<div class="productInfo">
 					<form method="get" action="item.jsp">
-						<input type="hidden" name="pid" value="01"> <input
+						<input type="hidden" name="pid" value="05"> <input
 							type="image"
-							src="http://www.yourmomhatesthis.com/images/Vans-Shoes-001a4.jpg">
+							src="https://ca.elementbrand.com/media/filter/m/img/m4528mus_blk_2.jpg">
 					</form>
 				</div>
 			</td>
 			<td>
 				<div class="productInfo">
 					<form method="get" action="item.jsp">
-						<input type="hidden" name="pid" value="01"> <input
+						<input type="hidden" name="pid" value="06"> <input
 							type="image"
-							src="http://www.yourmomhatesthis.com/images/Vans-Shoes-001a4.jpg">
+							src="https://ca.elementbrand.com/media/filter/m/img/m2075gil_chr_1.jpg">
 					</form>
 				</div>
 			</td>
 			<td>
 				<div class="productInfo">
 					<form method="get" action="item.jsp">
-						<input type="hidden" name="pid" value="01"> <input
+						<input type="hidden" name="pid" value="07"> <input
 							type="image"
-							src="http://www.yourmomhatesthis.com/images/Vans-Shoes-001a4.jpg">
+							src="https://ca.elementbrand.com/media/filter/m/img/jv757ran_blk_1.jpg">
 					</form>
 				</div>
 			</td>
 			<td>
 				<div class="productInfo">
 					<form method="get" action="item.jsp">
-						<input type="hidden" name="pid" value="01"> <input
-							type="image"
-							src="http://www.yourmomhatesthis.com/images/Vans-Shoes-001a4.jpg">
-					</form>
-				</div>
-			</td>
-		</tr>
-
-
-		<tr align="center">
-
-			<td>
-				<div class="productInfo">
-					<form method="get" action="item.jsp">
-						<input type="hidden" name="pid" value="01"> <input
-							type="image"
-							src="http://www.yourmomhatesthis.com/images/Vans-Shoes-001a4.jpg">
-					</form>
-				</div>
-			</td>
-			<td>
-				<div class="productInfo">
-					<form method="get" action="item.jsp">
-						<input type="hidden" name="pid" value="01"> <input
-							type="image"
-							src="http://www.yourmomhatesthis.com/images/Vans-Shoes-001a4.jpg">
-					</form>
-				</div>
-			</td>
-			<td>
-				<div class="productInfo">
-					<form method="get" action="item.jsp">
-						<input type="hidden" name="pid" value="01"> <input
-							type="image"
-							src="http://www.yourmomhatesthis.com/images/Vans-Shoes-001a4.jpg">
-					</form>
-				</div>
-			</td>
-			<td>
-				<div class="productInfo">
-					<form method="get" action="item.jsp">
-						<input type="hidden" name="pid" value="01"> <input
+						<input type="hidden" name="pid" value="08"> <input
 							type="image"
 							src="http://www.yourmomhatesthis.com/images/Vans-Shoes-001a4.jpg">
 					</form>
@@ -167,7 +129,7 @@
 			<td>
 				<div class="productInfo">
 					<form method="get" action="item.jsp">
-						<input type="hidden" name="pid" value="01"> <input
+						<input type="hidden" name="pid" value="09"> <input
 							type="image"
 							src="http://www.yourmomhatesthis.com/images/Vans-Shoes-001a4.jpg">
 					</form>
@@ -176,7 +138,7 @@
 			<td>
 				<div class="productInfo">
 					<form method="get" action="item.jsp">
-						<input type="hidden" name="pid" value="01"> <input
+						<input type="hidden" name="pid" value="10"> <input
 							type="image"
 							src="http://www.yourmomhatesthis.com/images/Vans-Shoes-001a4.jpg">
 					</form>
@@ -185,7 +147,7 @@
 			<td>
 				<div class="productInfo">
 					<form method="get" action="item.jsp">
-						<input type="hidden" name="pid" value="01"> <input
+						<input type="hidden" name="pid" value="11"> <input
 							type="image"
 							src="http://www.yourmomhatesthis.com/images/Vans-Shoes-001a4.jpg">
 					</form>
@@ -194,7 +156,48 @@
 			<td>
 				<div class="productInfo">
 					<form method="get" action="item.jsp">
-						<input type="hidden" name="pid" value="01"> <input
+						<input type="hidden" name="pid" value="12"> <input
+							type="image"
+							src="http://www.yourmomhatesthis.com/images/Vans-Shoes-001a4.jpg">
+					</form>
+				</div>
+			</td>
+		</tr>
+
+
+		<tr align="center">
+
+			<td>
+				<div class="productInfo">
+					<form method="get" action="item.jsp">
+						<input type="hidden" name="pid" value="13"> <input
+							type="image"
+							src="http://www.yourmomhatesthis.com/images/Vans-Shoes-001a4.jpg">
+					</form>
+				</div>
+			</td>
+			<td>
+				<div class="productInfo">
+					<form method="get" action="item.jsp">
+						<input type="hidden" name="pid" value="14"> <input
+							type="image"
+							src="http://www.yourmomhatesthis.com/images/Vans-Shoes-001a4.jpg">
+					</form>
+				</div>
+			</td>
+			<td>
+				<div class="productInfo">
+					<form method="get" action="item.jsp">
+						<input type="hidden" name="pid" value="15"> <input
+							type="image"
+							src="http://www.yourmomhatesthis.com/images/Vans-Shoes-001a4.jpg">
+					</form>
+				</div>
+			</td>
+			<td>
+				<div class="productInfo">
+					<form method="get" action="item.jsp">
+						<input type="hidden" name="pid" value="16"> <input
 							type="image"
 							src="http://www.yourmomhatesthis.com/images/Vans-Shoes-001a4.jpg">
 					</form>
@@ -207,7 +210,7 @@
 			<td>
 				<div class="productInfo">
 					<form method="get" action="item.jsp">
-						<input type="hidden" name="pid" value="01"> <input
+						<input type="hidden" name="pid" value="17"> <input
 							type="image"
 							src="http://www.yourmomhatesthis.com/images/Vans-Shoes-001a4.jpg">
 					</form>
@@ -216,7 +219,7 @@
 			<td>
 				<div class="productInfo">
 					<form method="get" action="item.jsp">
-						<input type="hidden" name="pid" value="01"> <input
+						<input type="hidden" name="pid" value="18"> <input
 							type="image"
 							src="http://www.yourmomhatesthis.com/images/Vans-Shoes-001a4.jpg">
 					</form>
@@ -225,7 +228,7 @@
 			<td>
 				<div class="productInfo">
 					<form method="get" action="item.jsp">
-						<input type="hidden" name="pid" value="01"> <input
+						<input type="hidden" name="pid" value="19"> <input
 							type="image"
 							src="http://www.yourmomhatesthis.com/images/Vans-Shoes-001a4.jpg">
 					</form>
@@ -234,9 +237,9 @@
 			<td>
 				<div class="productInfo">
 					<form method="get" action="item.jsp">
-						<input type="hidden" name="pid" value="01"> <input
+						<input type="hidden" name="pid" value="20"> <input
 							type="image"
-							src="http://www.yourmomhatesthis.com/images/Vans-Shoes-001a4.jpg">
+							src="https://ca.elementbrand.com/media/filter/m/img/j3065jam_hib_1_2.jpg">
 					</form>
 				</div>
 			</td>
