--- a/JSP/layout.html
+++ b/JSP/layout.html
@@ -12,10 +12,8 @@
 		table td{
 			max-width: 100%;
 			max-height: 25%;
-			background-color: black;
 		}
 		table tr{
-			background-color: black;
 		}
 		table img{
 			max-height:100%;
@@ -23,18 +21,17 @@
 			display: block; /*nothing sits beside it*/
 			vertical-align: top;
 			margin: 0px 10px 5px 10px; /*note: no commas*/
-			padding: 5px;
 		}
 		
 		.productInfo{
-			background-color: black;
+			//background-color: black;
 			vertical-align: bottom;
 			margin: auto;
 		}
 		input[type=image] {
-			width: 55%;
-			height: 55%;
-			border: 2px solid #000000;
+			width: 65%;
+			height: 65%;
+			border: 1px solid #000000;
 		}
 		
 </style>
