--- a/JSP/layout.html
+++ b/JSP/layout.html
@@ -114,7 +114,7 @@
 					<form method="get" action="item.jsp">
 						<input type="hidden" name="pid" value="08"> <input
 							type="image"
-							src="http://www.yourmomhatesthis.com/images/Vans-Shoes-001a4.jpg">
+							src="http://www.dogfunk.com/images/items/medium/VAN/VAN1102/NV.jpg">
 					</form>
 				</div>
 			</td>
@@ -128,7 +128,7 @@
 					<form method="get" action="item.jsp">
 						<input type="hidden" name="pid" value="09"> <input
 							type="image"
-							src="http://www.yourmomhatesthis.com/images/Vans-Shoes-001a4.jpg">
+							src="http://www.dogfunk.com/images/items/medium/SUP/SUP001A/CHA.jpg">
 					</form>
 				</div>
 			</td>
@@ -137,7 +137,7 @@
 					<form method="get" action="item.jsp">
 						<input type="hidden" name="pid" value="10"> <input
 							type="image"
-							src="http://www.yourmomhatesthis.com/images/Vans-Shoes-001a4.jpg">
+							src="http://www.dogfunk.com/images/items/medium/VLC/VLC00YA/BK.jpg">
 					</form>
 				</div>
 			</td>
@@ -146,7 +146,7 @@
 					<form method="get" action="item.jsp">
 						<input type="hidden" name="pid" value="11"> <input
 							type="image"
-							src="http://www.yourmomhatesthis.com/images/Vans-Shoes-001a4.jpg">
+							src="http://www.dogfunk.com/images/items/medium/DCS/DCS00KO/BK.jpg">
 					</form>
 				</div>
 			</td>
@@ -155,7 +155,7 @@
 					<form method="get" action="item.jsp">
 						<input type="hidden" name="pid" value="12"> <input
 							type="image"
-							src="http://www.yourmomhatesthis.com/images/Vans-Shoes-001a4.jpg">
+							src="http://www.dogfunk.com/images/items/medium/GNU/GNU0227/ONECOL.jpg">
 					</form>
 				</div>
 			</td>
@@ -169,7 +169,7 @@
 					<form method="get" action="item.jsp">
 						<input type="hidden" name="pid" value="13"> <input
 							type="image"
-							src="http://www.yourmomhatesthis.com/images/Vans-Shoes-001a4.jpg">
+							src="http://www.dogfunk.com/images/items/medium/GNU/GNU000V/ONECOL.jpg">
 					</form>
 				</div>
 			</td>
@@ -178,7 +178,7 @@
 					<form method="get" action="item.jsp">
 						<input type="hidden" name="pid" value="14"> <input
 							type="image"
-							src="http://www.yourmomhatesthis.com/images/Vans-Shoes-001a4.jpg">
+							src="http://www.backcountry.com/images/items/medium/NKA/NKA1137/JETBK.jpg">
 					</form>
 				</div>
 			</td>
@@ -187,7 +187,7 @@
 					<form method="get" action="item.jsp">
 						<input type="hidden" name="pid" value="15"> <input
 							type="image"
-							src="http://www.yourmomhatesthis.com/images/Vans-Shoes-001a4.jpg">
+							src="http://www.dogfunk.com/images/items/medium/SCZ/SCZ001E/ONECOL.jpg">
 					</form>
 				</div>
 			</td>
@@ -196,7 +196,7 @@
 					<form method="get" action="item.jsp">
 						<input type="hidden" name="pid" value="16"> <input
 							type="image"
-							src="http://www.yourmomhatesthis.com/images/Vans-Shoes-001a4.jpg">
+							src="http://www.dogfunk.com/images/items/medium/QKS/QKS01CS/BK.jpg">
 					</form>
 				</div>
 			</td>
@@ -209,7 +209,7 @@
 					<form method="get" action="item.jsp">
 						<input type="hidden" name="pid" value="17"> <input
 							type="image"
-							src="http://www.yourmomhatesthis.com/images/Vans-Shoes-001a4.jpg">
+							src="http://www.dogfunk.com/images/items/medium/QKS/QKS00UN/SYR.jpg">
 					</form>
 				</div>
 			</td>
@@ -218,7 +218,7 @@
 					<form method="get" action="item.jsp">
 						<input type="hidden" name="pid" value="18"> <input
 							type="image"
-							src="http://www.yourmomhatesthis.com/images/Vans-Shoes-001a4.jpg">
+							src="http://www.dogfunk.com/images/items/medium/ENJ/ENJ0399/BK.jpg">
 					</form>
 				</div>
 			</td>
@@ -227,7 +227,7 @@
 					<form method="get" action="item.jsp">
 						<input type="hidden" name="pid" value="19"> <input
 							type="image"
-							src="http://www.yourmomhatesthis.com/images/Vans-Shoes-001a4.jpg">
+							src="http://www.dogfunk.com/images/items/medium/QKS/QKS015T/BK.jpg">
 					</form>
 				</div>
 			</td>
