Tweaks to the grid and banners to link to the photogrid. Set it up to connect with itemPage.jsp

--- a/JSP/PhotoGrid.html
+++ b/JSP/PhotoGrid.html
@@ -7,7 +7,7 @@
 		Remove this if you use the .htaccess -->
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-		<title>HTML</title>
+		<title>Secret Stash</title>
 		<meta name="description" content="">
 		<meta name="author" content="Barrett">
 
@@ -91,13 +91,8 @@
 						</form>
 					</div>
 					<div>
-						<form action="create_user.jsp">
-							<input type="submit" value="Register">
-						</form>
-					</div>
-					<div>
-						<form action="login.jsp">
-							<input type="submit" value="Login">
+						<form action="PhotoGrid.html">
+							<input type="submit" value="Our Stash...">
 						</form>
 					</div>
 				</div>
