--- a/JSP/layout.html
+++ b/JSP/layout.html
@@ -42,7 +42,7 @@
 			<td>
 
 				<div class="productInfo">
-					<form method="get" action="item.jsp">
+					<form method="get" action="itemPage.jsp">
 						<input type="hidden" name="pid" value="01"> <input
 							type="image"
 							src="https://d4pww4vla1adk.cloudfront.net/media/catalog/product/cache/1/small_image/141x210/9df78eab33525d08d6e5fb8d27136e95/m/4/m4536tro-blk.jpg">
@@ -51,7 +51,7 @@
 			</td>
 			<td>
 				<div class="productInfo">
-					<form method="get" action="item.jsp">
+					<form method="get" action="itemPage.jsp">
 						<input type="hidden" name="pid" value="02"> <input
 							type="image"
 							src="https://d4pww4vla1adk.cloudfront.net/media/catalog/product/cache/1/small_image/141x210/9df78eab33525d08d6e5fb8d27136e95/3/5/358940.jpg">
@@ -60,7 +60,7 @@
 			</td>
 			<td>
 				<div class="productInfo">
-					<form method="get" action="item.jsp">
+					<form method="get" action="itemPage.jsp">
 						<input type="hidden" name="pid" value="03"> <input
 							type="image"
 							src="https://d4pww4vla1adk.cloudfront.net/media/catalog/product/cache/1/small_image/141x210/9df78eab33525d08d6e5fb8d27136e95/m/4/m4126dia-sag.jpg">
@@ -69,7 +69,7 @@
 			</td>
 			<td>
 				<div class="productInfo">
-					<form method="get" action="item.jsp">
+					<form method="get" action="itemPage.jsp">
 						<input type="hidden" name="pid" value="04"> <input
 							type="image"
 							src="https://d4pww4vla1adk.cloudfront.net/media/catalog/product/cache/1/small_image/141x210/9df78eab33525d08d6e5fb8d27136e95/s/1/s1412.jpg">
@@ -84,7 +84,7 @@
 
 			<td>
 				<div class="productInfo">
-					<form method="get" action="item.jsp">
+					<form method="get" action="itemPage.jsp">
 						<input type="hidden" name="pid" value="05"> <input
 							type="image"
 							src="https://ca.elementbrand.com/media/filter/m/img/m4528mus_blk_2.jpg">
@@ -93,7 +93,7 @@
 			</td>
 			<td>
 				<div class="productInfo">
-					<form method="get" action="item.jsp">
+					<form method="get" action="itemPage.jsp">
 						<input type="hidden" name="pid" value="06"> <input
 							type="image"
 							src="https://ca.elementbrand.com/media/filter/m/img/m2075gil_chr_1.jpg">
@@ -102,7 +102,7 @@
 			</td>
 			<td>
 				<div class="productInfo">
-					<form method="get" action="item.jsp">
+					<form method="get" action="itemPage.jsp">
 						<input type="hidden" name="pid" value="07"> <input
 							type="image"
 							src="https://ca.elementbrand.com/media/filter/m/img/jv757ran_blk_1.jpg">
@@ -111,7 +111,7 @@
 			</td>
 			<td>
 				<div class="productInfo">
-					<form method="get" action="item.jsp">
+					<form method="get" action="itemPage.jsp">
 						<input type="hidden" name="pid" value="08"> <input
 							type="image"
 							src="http://www.dogfunk.com/images/items/medium/VAN/VAN1102/NV.jpg">
@@ -125,7 +125,7 @@
 
 			<td>
 				<div class="productInfo">
-					<form method="get" action="item.jsp">
+					<form method="get" action="itemPage.jsp">
 						<input type="hidden" name="pid" value="09"> <input
 							type="image"
 							src="http://www.dogfunk.com/images/items/medium/SUP/SUP001A/CHA.jpg">
@@ -134,7 +134,7 @@
 			</td>
 			<td>
 				<div class="productInfo">
-					<form method="get" action="item.jsp">
+					<form method="get" action="itemPage.jsp">
 						<input type="hidden" name="pid" value="10"> <input
 							type="image"
 							src="http://www.dogfunk.com/images/items/medium/VLC/VLC00YA/BK.jpg">
@@ -143,7 +143,7 @@
 			</td>
 			<td>
 				<div class="productInfo">
-					<form method="get" action="item.jsp">
+					<form method="get" action="itemPage.jsp">
 						<input type="hidden" name="pid" value="11"> <input
 							type="image"
 							src="http://www.dogfunk.com/images/items/medium/DCS/DCS00KO/BK.jpg">
@@ -152,7 +152,7 @@
 			</td>
 			<td>
 				<div class="productInfo">
-					<form method="get" action="item.jsp">
+					<form method="get" action="itemPage.jsp">
 						<input type="hidden" name="pid" value="12"> <input
 							type="image"
 							src="http://www.dogfunk.com/images/items/medium/GNU/GNU0227/ONECOL.jpg">
@@ -166,7 +166,7 @@
 
 			<td>
 				<div class="productInfo">
-					<form method="get" action="item.jsp">
+					<form method="get" action="itemPage.jsp">
 						<input type="hidden" name="pid" value="13"> <input
 							type="image"
 							src="http://www.dogfunk.com/images/items/medium/GNU/GNU000V/ONECOL.jpg">
@@ -175,7 +175,7 @@
 			</td>
 			<td>
 				<div class="productInfo">
-					<form method="get" action="item.jsp">
+					<form method="get" action="itemPage.jsp">
 						<input type="hidden" name="pid" value="14"> <input
 							type="image"
 							src="http://www.backcountry.com/images/items/medium/NKA/NKA1137/JETBK.jpg">
@@ -184,7 +184,7 @@
 			</td>
 			<td>
 				<div class="productInfo">
-					<form method="get" action="item.jsp">
+					<form method="get" action="itemPage.jsp">
 						<input type="hidden" name="pid" value="15"> <input
 							type="image"
 							src="http://www.dogfunk.com/images/items/medium/SCZ/SCZ001E/ONECOL.jpg">
@@ -193,7 +193,7 @@
 			</td>
 			<td>
 				<div class="productInfo">
-					<form method="get" action="item.jsp">
+					<form method="get" action="itemPage.jsp">
 						<input type="hidden" name="pid" value="16"> <input
 							type="image"
 							src="http://www.dogfunk.com/images/items/medium/QKS/QKS01CS/BK.jpg">
@@ -206,7 +206,7 @@
 
 			<td>
 				<div class="productInfo">
-					<form method="get" action="item.jsp">
+					<form method="get" action="itemPage.jsp">
 						<input type="hidden" name="pid" value="17"> <input
 							type="image"
 							src="http://www.dogfunk.com/images/items/medium/QKS/QKS00UN/SYR.jpg">
@@ -215,7 +215,7 @@
 			</td>
 			<td>
 				<div class="productInfo">
-					<form method="get" action="item.jsp">
+					<form method="get" action="itemPage.jsp">
 						<input type="hidden" name="pid" value="18"> <input
 							type="image"
 							src="http://www.dogfunk.com/images/items/medium/ENJ/ENJ0399/BK.jpg">
@@ -224,7 +224,7 @@
 			</td>
 			<td>
 				<div class="productInfo">
-					<form method="get" action="item.jsp">
+					<form method="get" action="itemPage.jsp">
 						<input type="hidden" name="pid" value="19"> <input
 							type="image"
 							src="http://www.dogfunk.com/images/items/medium/QKS/QKS015T/BK.jpg">
@@ -233,7 +233,7 @@
 			</td>
 			<td>
 				<div class="productInfo">
-					<form method="get" action="item.jsp">
+					<form method="get" action="itemPage.jsp">
 						<input type="hidden" name="pid" value="20"> <input
 							type="image"
 							src="https://ca.elementbrand.com/media/filter/m/img/j3065jam_hib_1_2.jpg">
