--- a/JSP/login_banner.html
+++ b/JSP/login_banner.html
@@ -63,7 +63,11 @@ input[type=submit] {
 						<input type="submit" value="Cart" name="cart">
 					</form>
 				</div>
-				
+				<div>
+					<form action="PhotoGrid.html">
+						<input type="submit" value="Our Stash...">
+					</form>
+				</div>
 			</div>
 			
 
