--- a/JSP/general_banner.html
+++ b/JSP/general_banner.html
@@ -69,6 +69,11 @@ input[type=submit] {
 						<input type="submit" value="Login">
 					</form>
 				</div>
+				<div>
+					<form action="PhotoGrid.html">
+						<input type="submit" value="Our Stash...">
+					</form>
+				</div>
 			</div>
 		</div>
 	</div>
