--- a/JSP/layout.html
+++ b/JSP/layout.html
@@ -29,7 +29,7 @@
 			margin: auto;
 		}
 		input[type=image] {
-			width: 65%;
+			width: 75%;
 			height: 65%;
 			border: 1px solid #000000;
 		}
@@ -178,7 +178,7 @@
 					<form method="get" action="itemPage.jsp">
 						<input type="hidden" name="pid" value="14"> <input
 							type="image"
-							src="http://www.backcountry.com/images/items/medium/NKA/NKA1137/JETBK.jpg">
+							src="http://www.dogfunk.com/images/items/medium/VLC/VLC00VW/PISPUN.jpg">
 					</form>
 				</div>
 			</td>
