Background change, documentation tweak.

--- a/JSP/index.html
+++ b/JSP/index.html
@@ -57,7 +57,7 @@
 
 <p>After entering the correct uid/password (both "test") you can now get to the protected page.</p>
 
-<p>Go to our site.</p> <a href="tomcat/main_page.jsp">The Deal</a>
+<p>Go to our site.</p> <a href="tomcat/TheGrid/main_page.jsp">The Deal</a>
 
 </body>
 </html>
