Small appearance things.

--- a/JSP/general_banner.html
+++ b/JSP/general_banner.html
@@ -5,10 +5,6 @@
 <title>Generic Banner</title>
 
 <style>
-h1 {
-	color: gray
-}
-
 #banner, image {
 	width: 100%;
 }
@@ -49,7 +45,7 @@ input[type=submit] {
 		<div>	
 			<div>
 				<div id="banner">
-					<h1>The Grid</h1>
+					<h1><a href="main_page.jsp">The Grid</a></h1>
 					<hr style="padding:0px; margin:0px;">
 				</div>
 			</div>
