Item and main page design, most functionality.

--- a/JSP/general_banner.html
+++ b/JSP/general_banner.html
@@ -5,7 +5,7 @@
 <title>Generic Banner</title>
 
 <style>
-#banner, image {
+#banner {
 	width: 100%;
 }
 
@@ -25,7 +25,7 @@ input[type=submit] {
 	font-size: 15pt;
 	padding: 5px 5px;
 	z-index: -1;
-	width: 30x;
+	width: 100%;
 }
 
 #menus div {
@@ -58,6 +58,11 @@ input[type=submit] {
 				<div>
 					<form action="PhotoGrid.html">
 						<input type="submit" value="Our Stash...">
+					</form>
+				</div>
+				<div>
+					<form action="main_page.jsp">
+						<input type="submit" value="The Deal">
 					</form>
 				</div>
 			</div>
