--- a/JSP/login_banner.html
+++ b/JSP/login_banner.html
@@ -25,9 +25,9 @@
 <body>
 	<h1><strong> The Grid</strong></h1>
 		<ul class= "nav nav-tabs">
-		<li role="presentation"> <a href="login_banner.html"><strong> Our Stash</strong></a></li>
+		<li role="presentation"> <a href="PhotoGrid.html"><strong> Our Stash</strong></a></li>
 		<li role="presentation"><a href="shopping_cart.jsp"> <strong>Cart</strong></a></li>
-		<li role="presentation"><a href= "PhotoGrid.html"> <strong>Logout</strong> </a></li>
+		<li role="presentation"><a href= "logout.jsp"> <strong>Logout</strong> </a></li>
 	
 	</ul>
 	
