Automatically generate photo grid, doesn't show item currently on deal.

--- a/JSP/PhotoGrid.html
+++ b/JSP/PhotoGrid.html
@@ -113,7 +113,7 @@ input[type=submit] {
 
 
 	<div id="PhotoGrid">
-		<iframe src="layout.html" align="center"
+		<iframe src="Grid.jsp" align="center"
 			onclick="javascript:resizeIframe(this);"> </iframe>
 	</div>
 
