User account area, can modify demographic info.

--- a/JSP/general_banner.html
+++ b/JSP/general_banner.html
@@ -51,6 +51,17 @@ input[type=submit] {
 			</div>
 			<div id="menus">
 				<div>
+					<form action="logout.jsp">
+						<input type="submit" value="Logout">
+					</form>
+				</div>
+				<div>
+					<form action="user_account.jsp">
+						<input type="submit" value="Your Settings">
+					</form>
+				</div>
+				
+				<div>
 					<form action="shopping_cart.jsp">
 						<input type="submit" value="Cart">
 					</form>
