--- a/JSP/general_banner.html
+++ b/JSP/general_banner.html
@@ -1,85 +1,44 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
-<title>Generic Banner</title>
+	<meta charset="ISO-8859-1">
+	<title>Logged In Banner</title>
+	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.css" rel="stylesheet">
+	
+	<style>
+	.nav{
+		background-color: #e7dfdd ;
+		width:100%;
+	}
+	.nav-tabs
+	{
+		border-bottom: none;
+		font-size: 22px;
+		padding-left: 40%;
+		position: static;
+	}
 
-<style>
-#banner {
-	width: 100%;
-}
+	h1{
+		color: #000000;
+	}
+	
+	strong{
+	color: #000000;
+	}
+	
+	</style>
+	
+	<body>
+		<h1><strong> The Grid</strong></h1>
+		<ul class= "nav nav-tabs">
+			<li role="presentation"> <a href="PhotoGrid.html"><strong> Our Stash</strong></a></li>
+			<li role="presentation"><a href="shopping_cart.jsp"> <strong>Cart</strong></a></li>
+			<li role="presentation"><a href= "main_page.jsp"> <strong>The Deal</strong> </a></li>
+			<li role="presentation"><a href= "user_account.jsp"> <strong>Setting</strong> </a></li>
+			<li role="presentation"><a href= "logout.jsp"> <strong>Logout</strong> </a></li>
 
-#menus {
-	background-color: gray;
-	overflow: hidden;
-	width: 100%;
-	height: auto;
-	z-index: -2;
-}
+		</ul>
 
-input[type=submit] {
-	border: white;
-	background: transparent;
-	color: black;
-	font-family: "serif";
-	font-size: 15pt;
-	padding: 5px 5px;
-	z-index: -1;
-	width: 100%;
-}
+	</body>
+	</html>
 
-#menus div {
-	float: right;
-	display: inline-block;
-	height: auto;
-	text-align: center;
-	border-right: thin solid white;
-	width: 125px;
-}
-</style>
-
-</head>
-<body>
-
-	<div>
-		<div>	
-			<div>
-				<div id="banner">
-					<h1><a href="main_page.jsp">The Grid</a></h1>
-					<hr style="padding:0px; margin:0px;">
-				</div>
-			</div>
-			<div id="menus">
-				<div>
-					<form action="logout.jsp">
-						<input type="submit" value="Logout">
-					</form>
-				</div>
-				<div>
-					<form action="user_account.jsp">
-						<input type="submit" value="Your Settings">
-					</form>
-				</div>
-				
-				<div>
-					<form action="shopping_cart.jsp">
-						<input type="submit" value="Cart">
-					</form>
-				</div>
-				<div>
-					<form action="PhotoGrid.html">
-						<input type="submit" value="Our Stash...">
-					</form>
-				</div>
-				<div>
-					<form action="main_page.jsp">
-						<input type="submit" value="The Deal">
-					</form>
-				</div>
-			</div>
-		</div>
-	</div>
-
-
-</body>
-</html>
