--- a/JSP/general_banner.html
+++ b/JSP/general_banner.html
@@ -31,7 +31,7 @@
 	<body>
 		<h1><strong> The Grid</strong></h1>
 		<ul class= "nav nav-tabs">
-			<li role="presentation"> <a href="PhotoGrid.html"><strong> Our Stash</strong></a></li>
+			<li role="presentation"> <a href="PhotoGrid.jsp"><strong> Our Stash</strong></a></li>
 			<li role="presentation"><a href="shopping_cart.jsp"> <strong>Cart</strong></a></li>
 			<li role="presentation"><a href= "main_page.jsp"> <strong>The Deal</strong> </a></li>
 			<li role="presentation"><a href= "user_account.jsp"> <strong>Setting</strong> </a></li>
