Created recommendations, alternate item page

--- a/JSP/general_banner.html
+++ b/JSP/general_banner.html
@@ -21,6 +21,17 @@
 	h1{
 		color: #000000;
 	}
+	input[type=submit] {
+	    border: white;
+	    background: transparent;
+	    color: black;
+	    font-family: "serif";
+	    font-size: 15pt;
+	    padding: 5px 5px;
+	    z-index: -1;
+	    width: 100%;
+	}
+	
 	
 	strong{
 	color: #000000;
@@ -32,9 +43,9 @@
 		<h1><strong> The Grid</strong></h1>
 		<ul class= "nav nav-tabs">
 			<li role="presentation"> <a href="PhotoGrid.jsp"><strong> Our Stash</strong></a></li>
-			<li role="presentation"><a href="shopping_cart.jsp"> <strong>Cart</strong></a></li>
 			<li role="presentation"><a href= "main_page.jsp"> <strong>The Deal</strong> </a></li>
-			<li role="presentation"><a href= "user_account.jsp"> <strong>Setting</strong> </a></li>
+			<li role="presentation"><a href="shopping_cart.jsp"> <strong>Cart</strong></a></li>
+			<li role="presentation"><a href= "user_account.jsp"> <strong>Settings</strong> </a></li>
 			<li role="presentation"><a href= "logout.jsp"> <strong>Logout</strong> </a></li>
 
 		</ul>
