New reommendation page

--- a/JSP/general_banner.html
+++ b/JSP/general_banner.html
@@ -14,8 +14,9 @@
 	{
 		border-bottom: none;
 		font-size: 22px;
-		padding-left: 40%;
+		padding-left: 55%;
 		position: static;
+		float:right;
 	}
 
 	h1{
@@ -42,6 +43,7 @@
 	<body>
 		<h1><strong> The Grid</strong></h1>
 		<ul class= "nav nav-tabs">
+			<li role="presentation"><a href= "RecommendaPage.jsp"> <strong>Recommendation</strong> </a></li>
 			<li role="presentation"> <a href="PhotoGrid.jsp"><strong> Our Stash</strong></a></li>
 			<li role="presentation"><a href= "main_page.jsp"> <strong>The Deal</strong> </a></li>
 			<li role="presentation"><a href="shopping_cart.jsp"> <strong>Cart</strong></a></li>
